tests/org.eclipse.n4js.spec.tests/xpect-tests/Ch04_12_ThisType/AT-IDE0785_ImplicitThisType_for_variables.n4js.xt
/*
 * Copyright (c) 2016 NumberFour AG.
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *   NumberFour AG - Initial API and implementation
 */

/* XPECT_SETUP org.eclipse.n4js.spec.tests.N4JSSpecTest END_SETUP */

class C {
  getThis() : this {return null}
  m() : this {
    var x = this.getThis(); // type of variable x inferred to upper bound of this[C]

	// XPECT noerrors --> "C is not a subtype of this[C]." at "x"
    return x; // error: C not a subtype of this[C]
  }
}
